--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "tw": "npx tailwindcss -i src/css/pre.css -o src/style.css",
+    "tww": "npx tailwindcss -i src/css/pre.css -o src/style.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Guilherme Hastenreiter Ferreira",
